content/terraform-cdk/v0.14.x/docs/cdktf/concepts/hcl-interoperability.mdx
---
page_title: HCL Interoperability - CDK for Terraform
description: >-
  Use configurations written in HCL and configurations written in CDK for
  Terraform together to define and provision infrastructure.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-04-29T15:45:46-05:00
last_modified: 2025-04-29T15:45:46-05:00
# END AUTO GENERATED METADATA
---

# HCL Interoperability

Terraform requires infrastructure configuration files written in either [HashiCorp Configuration Language (HCL)](/language/syntax/configuration) or JSON syntax. CDK for Terraform (CDKTF) works by translating configurations defined in an imperative programming language to JSON configuration files for Terraform.

CDKTF may not be the right choice for every team and project within your organization. For example, some teams may already be very familiar with Terraform and have created HCL modules, providers, etc. To provide flexibility, CDKTF applications are interoperable with Terraform projects written in HCL. Specifically:

- CDKTF applications can use all existing Terraform [providers](/cdktf/concepts/providers) and HCL [modules](/cdktf/concepts/modules).
- CDKTF can generate modules that HCL Terraform projects can use in their configurations.

This page shows how you can interoperate HCL and CDK for Terraform configuration.

## CDKTF to HCL

The following example is a CDKTF application that uses the `hashicorp/random` provider to generate a random name.

<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#hcl-interop -->
<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#hcl-interop -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#hcl-interop -->

<CodeTabs>

```ts
import { Construct } from "constructs";
import { App, TerraformOutput, TerraformStack, TerraformVariable } from "cdktf";
import { Pet } from "./.gen/providers/random/pet";
import { RandomProvider } from "./.gen/providers/random/provider";

class MyStack extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);

    new RandomProvider(this, "default", {});
    const petNameLength = new TerraformVariable(this, "petNameLength", {
      type: "number",
      default: 2,
      description: "Pet name length",
    });

    const myPet = new Pet(this, "example", {
      length: petNameLength.value,
    });

    new TerraformOutput(this, "name", {
      value: myPet.id,
    });
  }
}

const app = new App();
new MyStack(app, "random-pet-module");
app.synth();
```

```java
import software.constructs.Construct;
import com.hashicorp.cdktf.TerraformStack;
import com.hashicorp.cdktf.TerraformOutput;
import com.hashicorp.cdktf.TerraformOutputConfig;
import com.hashicorp.cdktf.TerraformVariable;
import com.hashicorp.cdktf.TerraformVariableConfig;
import com.hashicorp.cdktf.App;
import imports.random.provider.RandomProvider;
import imports.random.pet.Pet;
import imports.random.pet.PetConfig;

public class MainHCL extends TerraformStack {

    public MainHCL(Construct scope, String id) {
        super(scope, id);

        new RandomProvider(this, "default");
        TerraformVariable petNameLength = new TerraformVariable(this, "petNameLength", TerraformVariableConfig.builder()
                .type("number")
                .defaultValue(2)
                .description("Pet name length")
                .build());

        Pet myPet = new Pet(this, "example", PetConfig.builder()
                .length(petNameLength.getNumberValue())
                .build());

        new TerraformOutput(this, "name", TerraformOutputConfig.builder()
                .value(myPet.getId())
                .build());
    }

    public static void main(String[] args) {
        final App app = new App();
        new MainHCL(app, "random-pet-module");
        app.synth();
    }
}
```

```python
from constructs import Construct
from cdktf import App, TerraformOutput, TerraformStack, TerraformVariable
from imports.random.pet import Pet
from imports.random.provider import RandomProvider

class HclInteropStack(TerraformStack):
    def __init__(self, scope: Construct, name: str):
        super().__init__(scope, name)

        RandomProvider(self, "default")
        petNameLength = TerraformVariable(self, "petNameLength",
                            type="number",
                            default=2,
                            description="Pet name length"
                        )

        myPet = Pet(self, "example",
                    length=petNameLength.number_value
                )

        TerraformOutput(self, "name",
            value=myPet.id
        )
# app = App()
# HclInteropStack(app, "random-pet-module")
# app.synth()
```

```csharp
using System;
using System.IO;
using System.Collections.Generic;
using System.Linq;
using Constructs;
using HashiCorp.Cdktf;
using random.Provider;
using random.Pet;

namespace Examples
{
    class HclInteropStack : TerraformStack
    {
        public HclInteropStack(Construct scope, string name) : base(scope, name)
        {
            new RandomProvider(this, "default", new RandomProviderConfig {});

            var petNameLength = new TerraformVariable(this, "petNameLength", new TerraformVariableConfig {
                Type = "number",
                Default = 2,
                Description = "Pet name length"
            });

            var myPet = new Pet(this, "example", new PetConfig {
                Length = petNameLength.NumberValue
            });

            new TerraformOutput(this, "name", new TerraformOutputConfig {
                Value = myPet.Id
            });
        }
    }
}
```

</CodeTabs>

To use this as a Terraform module, run `cdktf synth` and copy the resulting `cdktf.out/stacks/random-pet-module/cdktf.json` file out to the module directory in your HCL project.

After you transfer the `cdktf.json` file, you can reference the pet name module as you would any other HCL Terraform module.

```terraform
terraform {
  required_providers {
    docker = {
      source = "hashicorp/random"
      version = "~> 3.1"
    }
  }
}

module "pet" {
    source = "./mods/pet"
    petNameLength = "1"
}

output "name" {
  value = module.pet.name
}
```

## HCL to CDKTF

Use the [`cdktf convert`](/cdktf/cli-reference/commands#convert) command to automatically translate existing HCL into a preferred CDKTF language. The [modules documentation](/cdktf/concepts/modules) shows how to use existing Terraform modules in CDK for Terraform projects.
